--- a/wp-content/themes/alpha/sass/components/content/_entry-header.scss
+++ b/wp-content/themes/alpha/sass/components/content/_entry-header.scss
@@ -15,7 +15,7 @@
 }
 
 .post-thumbnail + .entry-header {
-	margin-top: -250px;
+	margin-top: -240px;
 	position: relative;
 
 	@include media( $mobile__only ) {
