--- a/wp-content/themes/alpha/style.css
+++ b/wp-content/themes/alpha/style.css
@@ -1673,7 +1673,7 @@ input.gform_button [class*=" aicon-"]:before {
 }
 
 .post-thumbnail + .entry-header {
-  margin-top: -250px;
+  margin-top: -240px;
   position: relative;
 }
 @media (max-width: 599px) {
